2004-02-17  Jorn Baayen  <jbaayen@gnome.org>

	* TODO:
	* src/PlaylistWindow.cs:
	* src/Song.cs:
	* src/StringUtils.cs:

	Album cover DnD, and DnD'ing m3u files to the playlist will load
	them.

	This needs an uncommited fix to Gtk# before it will work without
	crashing, though ..

2004-02-17  Jorn Baayen  <jbaayen@gnome.org>

	* src/Album.cs:
	* src/Song.cs:
	* src/SongDatabase.cs:

	Stop leaking removed songs and albums.
	
	* src/PlaylistWindow.cs:

	Clean up window visibility code some more.

2004-02-16  Jorn Baayen  <jbaayen@gnome.org>

	* src/PlaylistWindow.cs:

	Make window visibility menu item in the tray icon work well when
	the window is iconified.

2004-02-15  Jorn Baayen  <jbaayen@gnome.org>

	* src/SongDatabase.cs:

	Add a missing null check.

2004-02-15  Jorn Baayen  <jbaayen@gnome.org>

	* src/SongDatabase.cs:

	Mark song as dead earlier.

2004-02-15  Jorn Baayen  <jbaayen@gnome.org>

	* src/AddAlbumWindow.cs:
	* src/AddSongWindow.cs:

	Tiny cleanup.

2004-02-15  Jorn Baayen  <jbaayen@gnome.org>

	* TODO:

	Added info about visualization.
	
	* src/About.cs:

	Added translation stuff.

2004-02-15  Jorn Baayen  <jbaayen@gnome.org>

	* libmuine/Makefile.am:
	* libmuine/gettext-utils.c: (init_intl):
	* libmuine/gettext-utils.h:
	* src/Muine.cs:
	
	Setup intl on startup.

2004-02-15  Jorn Baayen  <jbaayen@gnome.org>

	* src/AddAlbumWindow.cs:
	* src/Album.cs:
	* src/CoverDatabase.cs:
	* src/Metadata.cs:
	* src/NotificationAreaIcon.cs:
	* src/Player.cs:
	* src/PlaylistWindow.cs:
	* src/ProgressWindow.cs:
	* src/SongDatabase.cs:
	* src/StringUtils.cs:

	Hopefully marked all strings for translation.

2004-02-15  Jorn Baayen  <jbaayen@gnome.org>

	* Makefile.am:
	* README:
	* TODO:
	* configure.in:
	* data/glade/AddWindow.glade:
	* data/glade/ErrorDialog.glade:
	* data/glade/ProgressWindow.glade:
	* data/glade/YesNoDialog.glade:
	* po/POTFILES.in:
	* po/cs.po:
	* po/de.po:
	* po/es.po:
	* po/fr.po:
	* po/hr.po:
	* po/nl.po:
	* po/sr.po:
	* po/sr@Latn.po: